# chat-with-videos

./: .env.example  .gitignore  DEPLOY.md  LICENSE  PLAN-AGENT.md  PLAN.md  README.md  pyproject.toml
.claude/: settings.local.json
config/: settings.yaml
frontend/src/app/: globals.css  layout.tsx
frontend/src/components/chat/: ChatContainer.tsx  ChatInput.tsx  MessageBubble.tsx  ProgressSteps.tsx
frontend/src/components/video/: VideoPlayer.tsx  VideoSnippetCard.tsx
frontend/src/hooks/: useChat.ts
frontend/src/lib/: types.ts
scripts/: ingest.py  list_videos.py  search.py  start_server.py  test_local.py
src/: config.py
src/agents/: __init__.py  context_ranker.py  orchestrator.py  query_rewriter.py
src/api/: __init__.py  db_config.py  main.py
src/api/routes/: chat.py  video.py
src/api/services/: video_service.py
src/models/: __init__.py  embeddings.py  schemas.py
src/pipelines/: __init__.py  download.py  ingest.py  transcripts.py
src/search/: __init__.py  engine.py
src/storage/: __init__.py  blob_utils.py  lancedb_client.py
tests/: __init__.py
